--- a/Main/ezsploitv/ezsploitv.csproj
+++ b/Main/ezsploitv/ezsploitv.csproj
@@ -185,6 +185,9 @@
     <Resource Include="1345874.png" />
     <Resource Include="874758-200.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\10_10_10.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Web.WebView2.1.0.1774.30\build\Microsoft.Web.WebView2.targets" Condition="Exists('..\packages\Microsoft.Web.WebView2.1.0.1774.30\build\Microsoft.Web.WebView2.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
