--- a/Main/ezsploitv/ezsploitv.csproj
+++ b/Main/ezsploitv/ezsploitv.csproj
@@ -85,6 +85,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="RBXMSEAPI.Classes\fluxteam_net_api.cs" />
+    <Compile Include="RBXMSEAPI.Properties\Resources.cs" />
+    <Compile Include="RBXMSEAPI.Properties\Settings.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -178,6 +181,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\10_10_10.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="RBXMSEAPI\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Web.WebView2.1.0.1774.30\build\Microsoft.Web.WebView2.targets" Condition="Exists('..\packages\Microsoft.Web.WebView2.1.0.1774.30\build\Microsoft.Web.WebView2.targets')" />
